# populationdynamics

./: DESCRIPTION  NAMESPACE  README.md  configure  configure.ac
R/: saddle_node_ibm.R
inst/examples/: pomp_explore.Rmd  pomp_explore.md
man/: saddle_node_ibm.Rd
src/: Makevars.in  airy.c  gillespie.h  gillespie_recording.c  saddle_node_direct.c
